--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the
             overall personality of the person.</p>
           <ul class="manager-list">
-            <li>Never worry about overpaying for your energy again.</li>
-            <li>We will only switch you to energy companies that we trust and will treat you right</li>
-            <li>We track the markets daily and know where the savings are.</li>
+            <li><span>Never worry about overpaying for your energy again.</span></li>
+            <li><span>We will only switch you to energy companies that we trust and will treat you right</span></li>
+            <li><span>We track the markets daily and know where the savings are.</span></li>
           </ul>
         </div>
       </section>
@@ -143,8 +143,8 @@
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
       </ul>
-      <form action="" class="subscribe">
-        <input type="email" name="" id="">
+      <form class="subscribe">
+        <input type="email" name="email"  id="email" autocomplete="off">
         <button>Sign up</button>
       </form>
     </footer>
