--- a/index.html
+++ b/index.html
@@ -56,29 +56,31 @@
 
       <section class="features">
         <h2>We design tools to unveil your superpowers</h2>
-        <ul class="powers">
-          <li>
-            <img src="images/arrow.svg" alt="">
-            <h4>First click tests</h4>
-            <p>While most people enjoy casino gambling,</p>
-          </li>
-          <li>
-            <img src="images/snake.svg" alt="">
-            <h4>Design surveys</h4>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
-          </li>
-          <li>
-            <img src="images/heart.svg" alt="">
-            <h4>Preference tests</h4>
-            <p>The Myspace page defines the individual.</p>
-          </li>
-          <li>
-            <img src="images/hourglass.svg" alt="">
-            <h4>Five second tests</h4>
-            <p>Personal choices and the overall personality of the person.</p>
-          </li>
-        </ul>
-        <button>SIGN UP NOW</button>
+        <div class="bg-image">
+          <ul class="powers">
+            <li>
+              <img src="images/arrow.svg" alt="">
+              <h4>First click tests</h4>
+              <p>While most people enjoy casino gambling,</p>
+            </li>
+            <li>
+              <img src="images/snake.svg" alt="">
+              <h4>Design surveys</h4>
+              <p>Sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+              <img src="images/heart.svg" alt="">
+              <h4>Preference tests</h4>
+              <p>The Myspace page defines the individual.</p>
+            </li>
+            <li>
+              <img src="images/hourglass.svg" alt="">
+              <h4>Five second tests</h4>
+              <p>Personal choices and the overall personality of the person.</p>
+            </li>
+          </ul>
+          <button>SIGN UP NOW</button>
+        </div>
       </section>
 
       <section class="professionals">
