--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -87,7 +90,8 @@
         <div class="content">
           <span>Effortless Validation for</span>
           <h2>Design Professionals</h2>
-          <p id="pr-p1">The Myspace page defines the individual, his or her haracteristics, traits, personal choices and the
+          <p id="pr-p1">The Myspace page defines the individual, his or her haracteristics, traits, personal choices and
+            the
             overall personality of the person</p>
           <h3>Accessory makers</h3>
           <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
@@ -113,12 +117,13 @@
           </ul>
         </div>
       </section>
-      
+
       <section class="marketers">
         <div class="content">
           <span>Optimisation for</span>
           <h2>Marketers</h2>
-          <p class="mark-p1">Few would argue that, despite the advancements of feminism over the past three decades, women still face a
+          <p class="mark-p1">Few would argue that, despite the advancements of feminism over the past three decades,
+            women still face a
             double standard when it comes to their behavior.</p>
           <h3>Accessory makers</h3>
           <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
@@ -130,24 +135,43 @@
         <img src="images/marketers.svg" alt="marketers">
       </section>
     </main>
-      <hr>
+    <hr>
     <footer class="footer">
       <img src="/images/logo.svg" alt="productly logo" class="logo">
+
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li>
+          <h5 class="title-list">Quick Links</h5>
+        </li>
+        <li>
+          <ul class="list-child">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </li>
       </ul>
+
       <ul>
-        <li><a href="#">Disclaimer</a></li>
-        <li><a href="#">Financing</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
+        <li>
+          <h5 class="title-list">Legal Stuff</h5>
+        </li>
+        <li>
+          <ul class="list-child">
+            <li><a href="#">Disclaimer</a></li>
+            <li><a href="#">Financing</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
+        </li>
       </ul>
+
       <form class="subscribe">
-        <input type="email" name="email"  id="email" autocomplete="off">
-        <button>Sign up</button>
+        <h5>Knowing you're always on the best energy deal.</h5>
+        <label for="phone"></label>
+        <input type="tel" name="phone" id="phone" placeholder="Enter your phone Number">
+        <button>Sign up now</button>
       </form>
     </footer>
   </div>
